[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "satveg_api"
version = "1.0.1"
requires-python = ">=3.8"
dependencies = ["pandas>=1.4.3", "requests>=2.28.1"]
authors = [{name="Vitor Leonardo Pauloski"}]
readme = "README.md"

[project.urls]
"Source code" = "https://github.com/vitorpauloski/satveg-api"